fixed right whitespace issue on mobile devices

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,6 +2,15 @@
     font-family: 'Raleway', sans-serif;
 }
 
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 .header {
     height: 87px;
     /*background-color: black;*/
